cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_311.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/des_enc.c:241: error: DEAD_STORE
  The value written to &out (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/des_enc.c:241:13: Write of unused value
239.   
240.               l2c(tout0, out);
241.               l2c(tout1, out);
                   ^
242.           }
243.           iv = &(*ivec)[0];
